// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders array of additional items in control bar after pagination controls in own div 1`] = `
<div>
  <div>
    <div>
      <div>
        Item 
        0
      </div>
      <div>
        Item 
        1
      </div>
    </div>
    <div
      class="makeStyles-paginationControlBar-3"
    >
      PaginationControls Mock 
      {"pageNum":0,"numPages":2,"itemsName":"bar items"}
      <div>
        <span>
          Bar Item 1
        </span>
        <span>
          Bar Item 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination renders single additional item in control bar after pagination controls in own div 1`] = `
<div>
  <div>
    <div>
      <div>
        Item 
        0
      </div>
      <div>
        Item 
        1
      </div>
    </div>
    <div
      class="makeStyles-paginationControlBar-2"
    >
      PaginationControls Mock 
      {"pageNum":0,"numPages":2,"itemsName":"bar items"}
      <div>
        <span>
          Bar Item
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination renders the correct number of items from the start of the array on the first page 1`] = `
<div>
  <div>
    <div>
      <div>
        Item 
        0
      </div>
      <div>
        Item 
        1
      </div>
      <div>
        Item 
        2
      </div>
      <div>
        Item 
        3
      </div>
      <div>
        Item 
        4
      </div>
    </div>
    <div
      class="makeStyles-paginationControlBar-1"
    >
      PaginationControls Mock 
      {"pageNum":0,"numPages":2,"itemsName":null}
    </div>
  </div>
</div>
`;

exports[`Pagination skips div for pagination controls and bar item if only one page and no bar item 1`] = `
<div>
  <div>
    <div>
      <div>
        Item 
        0
      </div>
      <div>
        Item 
        1
      </div>
    </div>
  </div>
</div>
`;
